@startuml
!theme plain
left to right direction
skinparam shadowing false
skinparam defaultFontName Arial
skinparam linetype ortho

title VSTEP Platform - Database Relationship Diagram

entity "users" as users {
  * id : uuid <<PK>>
  --
  email : varchar
  role : varchar
}

entity "profiles" as profiles {
  * id : uuid <<PK>>
  --
  account_id : uuid <<FK>>
  target_level : varchar
}

entity "coin_transactions" as coins {
  * id : uuid <<PK>>
  --
  profile_id : uuid <<FK>>
  amount : int
  type : varchar
}

entity "wallet_topup_orders" as topups {
  * id : uuid <<PK>>
  --
  profile_id : uuid <<FK>>
  package_id : uuid <<FK>>
  order_code : bigint
  status : varchar
}

entity "courses" as courses {
  * id : uuid <<PK>>
  --
  teacher_id : uuid <<FK>>
  price_vnd : bigint
}

entity "course_enrollments" as enrollments {
  * id : uuid <<PK>>
  --
  profile_id : uuid <<FK>>
  course_id : uuid <<FK>>
}

entity "course_enrollment_orders" as enrollment_orders {
  * id : uuid <<PK>>
  --
  profile_id : uuid <<FK>>
  course_id : uuid <<FK>>
  order_code : bigint
  payment_url : text
  status : varchar
}

entity "teacher_slots" as slots {
  * id : uuid <<PK>>
  --
  teacher_id : uuid <<FK>>
  course_id : uuid <<FK>>
}

entity "teacher_bookings" as bookings {
  * id : uuid <<PK>>
  --
  profile_id : uuid <<FK>>
  teacher_slot_id : uuid <<FK>>
}

entity "practice_sessions" as practice_sessions {
  * id : uuid <<PK>>
  --
  profile_id : uuid <<FK>>
  skill : varchar
}

entity "practice_writing_submissions" as practice_writing {
  * id : uuid <<PK>>
  --
  profile_id : uuid <<FK>>
  prompt_id : uuid <<FK>>
  text : text
}

entity "practice_speaking_submissions" as practice_speaking {
  * id : uuid <<PK>>
  --
  profile_id : uuid <<FK>>
  task_id : uuid <<FK>>
  audio_url : text
}

entity "exams" as exams {
  * id : uuid <<PK>>
  --
  title : varchar
}

entity "exam_versions" as versions {
  * id : uuid <<PK>>
  --
  exam_id : uuid <<FK>>
  version_number : int
}

entity "exam_sessions" as exam_sessions {
  * id : uuid <<PK>>
  --
  profile_id : uuid <<FK>>
  exam_version_id : uuid <<FK>>
  status : varchar
}

entity "exam_mcq_answers" as mcq_answers {
  * id : uuid <<PK>>
  --
  exam_session_id : uuid <<FK>>
  item_ref_id : uuid
}

entity "exam_writing_submissions" as exam_writing {
  * id : uuid <<PK>>
  --
  exam_session_id : uuid <<FK>>
  writing_task_id : uuid <<FK>>
  text : text
}

entity "exam_speaking_submissions" as exam_speaking {
  * id : uuid <<PK>>
  --
  exam_session_id : uuid <<FK>>
  speaking_part_id : uuid <<FK>>
  audio_url : text
}

entity "assessment_rubrics" as rubrics {
  * id : uuid <<PK>>
  --
  skill : varchar
  task_type : varchar
  criteria : jsonb
}

entity "assessment_attempts" as attempts {
  * id : uuid <<PK>>
  --
  profile_id : uuid <<FK>>
  rubric_id : uuid <<FK>>
  source_type : varchar
  source_id : uuid
}

entity "assessment_jobs" as jobs {
  * id : uuid <<PK>>
  --
  attempt_id : uuid <<FK>>
  status : varchar
}

entity "assessment_evidence" as evidence {
  * id : uuid <<PK>>
  --
  attempt_id : uuid <<FK>>
  rubric_id : uuid <<FK>>
  signals : jsonb
}

entity "assessment_results" as results {
  * id : uuid <<PK>>
  --
  attempt_id : uuid <<FK>>
  rubric_id : uuid <<FK>>
  criterion_scores : jsonb
  overall_band : decimal
}

entity "notifications" as notifications {
  * id : uuid <<PK>>
  --
  profile_id : uuid <<FK>>
  type : varchar
}

users ||--o{ profiles : owns
profiles ||--o{ coins : ledger
profiles ||--o{ topups : creates
profiles ||--o{ enrollments : enrolls
profiles ||--o{ enrollment_orders : pays
profiles ||--o{ bookings : books
profiles ||--o{ practice_sessions : practices
profiles ||--o{ practice_writing : writes
profiles ||--o{ practice_speaking : speaks
profiles ||--o{ exam_sessions : takes
profiles ||--o{ attempts : assessed
profiles ||--o{ notifications : receives

users ||--o{ courses : teaches
courses ||--o{ enrollments : has
courses ||--o{ enrollment_orders : ordered
courses ||--o{ slots : schedules
slots ||--o{ bookings : reserves

exams ||--o{ versions : versions
versions ||--o{ exam_sessions : used_by
exam_sessions ||--o{ mcq_answers : answers
exam_sessions ||--o{ exam_writing : writing
exam_sessions ||--o{ exam_speaking : speaking

rubrics ||--o{ attempts : applies
rubrics ||--o{ evidence : validates
rubrics ||--o{ results : scores
attempts ||--|| jobs : processed_by
attempts ||--o| evidence : produces
attempts ||--o| results : finalizes

practice_writing ||..o{ attempts : source_id
practice_speaking ||..o{ attempts : source_id
exam_writing ||..o{ attempts : source_id
exam_speaking ||..o{ attempts : source_id

@enduml
